Correccion nombre d epropiedad

--- a/Univ CyberSeguridad/story-uni.html
+++ b/Univ CyberSeguridad/story-uni.html
@@ -1,69 +1,69 @@
 <style>
-    .HuaweiScroll2 p {
+    .universidad p {
         margin: 0px;
     }
 
-    .HuaweiScroll2 .btn {
+    .universidad .btn {
         margin-top: 0;
         padding-left: 0;
     }
 
-    .HuaweiScroll2 a,
+    .universidad a,
     .ClaroScroll a:hover {
         text-decoration: none;
         color: #fff
     }
 
-    .HuaweiScroll2 .bzm_wrapper {
+    .universidad .bzm_wrapper {
         position: relative;
         overflow: hidden;
         color: #000;
         font-family: Lato, sans-serif;
     }
 
-    .HuaweiScroll2 .bzm_wrapper.size_320x480 {
+    .universidad .bzm_wrapper.size_320x480 {
         width: 320px;
         height: 480px;
         background-color: #FFF;
         overflow-y: auto;
     }
 
-    .HuaweiScroll2 .bzm_cover,
+    .universidad .bzm_cover,
     .ClaroScroll .carousel-wrapper {
         position: relative;
         width: 100%
     }
 
-    .HuaweiScroll2 .bzm_cover {
+    .universidad .bzm_cover {
         height: 150px
     }
 
-    .HuaweiScroll2 .bzm_cover.bzm_pos_tl {
+    .universidad .bzm_cover.bzm_pos_tl {
         top: 3%;
         left: 3%
     }
 
-    .HuaweiScroll2 .bzm_pos_tr {
+    .universidad .bzm_pos_tr {
         top: 3%;
         right: 3%
     }
 
-    .HuaweiScroll2 .bzm_pos_bl {
+    .universidad .bzm_pos_bl {
         bottom: 3%;
         left: 3%
     }
 
-    .HuaweiScroll2 .bzm_pos_br {
+    .universidad .bzm_pos_br {
         bottom: 3%;
         right: 3%
     }
 
-    .HuaweiScroll2 .bzm_pos_bm {
+    .universidad .bzm_pos_bm {
         bottom: 3%;
         left: calc(100% - 70%)
     }
 
-    .HuaweiScroll2 .bzm_text {
+    .universidad .bzm_text {
         padding: 2px 0 0 .3em;
         line-height: 1.1;
         color: #000;
@@ -72,40 +72,40 @@
             
     }
 
-    .HuaweiScroll2 .bzm_text_title {
+    .universidad .bzm_text_title {
         font-size: 14px;
         color: #000
     }
 
-    .HuaweiScroll2 .bzm_text_light {
+    .universidad .bzm_text_light {
         font-size: 10px;
         font-weight: 0
     }
 
-    .HuaweiScroll2 .bzm_text_medium {
+    .universidad .bzm_text_medium {
         font-size: 14px;
         font-weight: 500;
         line-height: 1.4
     }
 
-    .HuaweiScroll2 .bzm_text_bold {
+    .universidad .bzm_text_bold {
         font-size: 16px;
         font-weight: 700;
         line-height: 1
     }
 
-    .HuaweiScroll2 .bzm_text_small {
+    .universidad .bzm_text_small {
         font-size: 10px;
         line-height: 1
     }
 
-    .HuaweiScroll2 .carousel-wrapper {
+    .universidad .carousel-wrapper {
         height: auto;
         margin: 0 auto
     }
 
 
-    .HuaweiScroll2 .bzm_button {
+    .universidad .bzm_button {
         position: absolute;
         bottom: 7px;
         left: 3%;
@@ -119,7 +119,7 @@
         cursor: pointer
     }
 
-    .HuaweiScroll2 .bzm_button:hover {
+    .universidad .bzm_button:hover {
         background-color: #579e38
     }
 
@@ -129,7 +129,7 @@
         overflow-y: hidden
     }
 
-    .HuaweiScroll2 #botones-para-compartir {
+    .universidad #botones-para-compartir {
         text-align: right;
     }
 
@@ -158,7 +158,7 @@
         -o-transition: all .5s;
     }
 
-    .HuaweiScroll2 .logo {
+    .universidad .logo {
         margin-top: -8px;
         margin-right: 10px;
         width: 33.33%;
@@ -182,7 +182,7 @@
         height: 25px;
     }
 
-    .HuaweiScroll2 #botones-para-compartir {
+    .universidad #botones-para-compartir {
         text-align: right;
     }
 
@@ -241,7 +241,7 @@
     }
 
     @media screen and (max-width: 480px) {
-        .HuaweiScroll2 .bzm_wrapper.size_320x480 {
+        .universidad .bzm_wrapper.size_320x480 {
             width: 270px;
             height: 411px;
             background-color: #FFF;
@@ -262,7 +262,7 @@
 </style>
 
 
-<div class="HuaweiScroll2" style="margin:0px; background-color:white;">
+<div class="universidad" style="margin:0px; background-color:white;">
     <div class="bzm_wrapper carousel-wrapper size_320x480">
         <div class="context">
 
