--- a/Univ CyberSeguridad/story-uni.html
+++ b/Univ CyberSeguridad/story-uni.html
@@ -22,7 +22,7 @@
     }
 
     .universidad .bzm_wrapper.size_320x480 {
-        width: 320px;
+        width: 318px;
         height: 480px;
         background-color: #FFF;
         overflow-y: auto;
@@ -124,7 +124,7 @@
     }
 
     .HuaweiScroll1 .carousel-container {
-        width: 320px;
+        width: 318px;
         height: 250px;
         overflow-y: hidden
     }
@@ -321,7 +321,7 @@ El Internet de la Cosas (IoT), se espera que en el<b> 2021 existan 13.200 millon
 <b>¿Te interesa el mundo de la ciberseguridad, te recomendamos el ciclo formativo de 20 semanas de I2 Labs Academy.</b>
                 <br>
               
-            <div style="text-align:left; background-color:white; background-size:25px; height:25px; padding-top:25px;">
+            <div style="text-align:left; background-color:white; background-size:25px; height:23px; padding-top:10px; margin-bottom: 10px;">
                 <a href="https://i2labsacademy.com/" style="line-height: 31px; padding-right:10px;" target="_blank">
                    <img class="logo-enterp" src="https://i.imgur.com/92A06kb.png" style="float:right;">
                 </a>
