Cambio de texo a Ingles

--- a/Univ CyberSeguridad/story-uni.html
+++ b/Univ CyberSeguridad/story-uni.html
@@ -273,8 +273,8 @@
                         </a>
                     </span>
                 <a href="https://i2labsacademy.com/" style="padding-top:15px;" target="_blank">
-                    <span class="bzm_text_title  bzm_text_bold" style="color:#000; line-height:1; font-size:21px; margin-top: 10px;">
-                        ¿Te atrae la ciberseguridad?
+                    <span class="bzm_text_title  bzm_text_bold" style="color:#000; line-height:1.1; font-size:23px; margin-top: 10px;">
+                        Are you passionate about Cybersecurity? 
                     </span>
                 </a>
                 <div style="text-align:left; background-color:white; background-size:25px; height:20px; padding-top:10px; padding-left:4px;">
@@ -297,31 +297,31 @@
 
             <div class="bzm_text" style="margin-top: 10px;">
                 <span class="bzm_text_title  bzm_text_medium" style="display:block;color:#000; text-align: justify;">
-				    <i>Los fabricantes, las consultoras y las compañías que se especializan en <b>ransformación digital </b>tcoinciden en las líneas que marcarán este año en<b> ciber seguridad.</b><br>
-				    Entre estos factores hallamos los siguientes:
-
-<b>El ransomware,</b> seguirá siendo una de las <b>principales fuentes de negocio de los cibercriminales.</b> Se trata de secuestrar archivos o equipos, con la idea de que las empresas  <b>paguen</b> grandes cantidades de dinero <b>para recuperar sus sistemas.</b>
+				    <i>We live in the Internet of Everything -<b> a world of convenience</b> where connected devices can control our homes, our cars, medical devices and so much more. 
 				    <br>
+				    <b>With Gartner projecting 21 billion devices connecting to the internet by 2020, </b>the attack surface is unimaginably large, and the internet of things <b>(IoT)</b> is essentially a playground for cyber criminals. 
 				    <span class="bzm_text_title  bzm_text_medium" style="display:block; margin-top:-15px; padding-top:30px; padding-bottom:20px;">
                         <a href="https://i2labsacademy.com/" style="display:block; margin-left:-10px;" target="_blank">
                             <div class="img-news" style="background-image:url(https://i.imgur.com/FHsD2mN.png);"></div>
                         </a>
                     </span>
-				    <b>El malware,</b> el clásico software malicioso cuyo objetivo es infiltrarse en el sistema para <b>atacarlo,</b> tendrá en el punto de mira los dispositivos móviles.
-<b>Las criptodivisas.</b> El aumento de la popularidad del <b>Bitcoin </b> ha sido fundamental para que los delincuentes tengan como objetivo a<b> mineros y usuarios</b> de este tipo de monedas. En 2018 se prevé que los delincuentes se fijen más en este tipo de objetivos. <br>
+				    As we’ve seen time and again,<b> hackers will exploit new and unknown vulnerabilities,</b> and even discover old vulnerabilities hidden in IoT devices. At some point, their successful exploitations will result in a major <b>catastrophe.</b><br><br>
 
-El Internet de la Cosas (IoT), se espera que en el<b> 2021 existan 13.200 millones de conexiones entre dispositivos IoT.</b> A medida que aumenten nuevos sistemas, estos se convertirán en los objetivos de los ciberdelincuentes, por lo que los dispositivos deben estar protegidos.
+Our quality of life today has become absolutely <b>dependent on the resilience of IoT.</b> However, we continue to find vulnerabilities in smart home IoT devices, medical devices, connected cars, printers and more. 
+
                 <br>                
                 <span class="bzm_text_title  bzm_text_medium" style="display:block; margin-top:-15px; padding-top:30px; padding-bottom:20px;">
                     <a href="https://i2labsacademy.com/" style="display:block; margin-left:-10px;" target="_blank">
                         <div class="img-news" style="background-image:url(https://i.imgur.com/aTD1KfO.png);"></div>
                     </a>
                 </span>
-               <b>El incremento del cibercrimen,</b> los ataques a gran escala y las nuevas técnicas aplicadas a la ciberseguridad <b>marcarán este 2018.</b> Las empresas deberán fijar su atención en salvaguardar sus datos. Y no solo las grandes compañías. <br>Los pequeños y medianos negocios también se verán intimidados por esta amenaza que seguirá aumentando a medida que la sociedad se vaya digitalizando. <br>
-<b>¿Te interesa el mundo de la ciberseguridad, te recomendamos el ciclo formativo de 20 semanas de I2 Labs Academy.</b>
+               We simply cannot keep up with the expanding <b>attack surface,</b> which makes it impossible to identify, monitor and manage the entire breadth of these devices. At the same time, we’re also facing a <b>major skills shortage and talent gap in cybersecurity.</b><br><br> 
+
+
+<b>By 2021, there will be over 3.5 million unfilled cybersecurity jobs,</b> according to a recent Cybersecurity Ventures report. <br><b>Get more information about I2 Labs Academy. 20 weeks training course.</b> 
                 <br>
               
-            <div style="text-align:left; background-color:white; background-size:25px; height:23px; padding-top:10px; margin-bottom: 10px;">
+            <div style="text-align:left; background-color:white; background-size:25px; height:23px; padding-top:15px; margin-bottom: 10px;">
                 <a href="https://i2labsacademy.com/" style="line-height: 31px; padding-right:10px;" target="_blank">
                    <img class="logo-enterp" src="https://i.imgur.com/92A06kb.png" style="float:right;">
                 </a>
