--- a/NIISAN/fade-nissan.html
+++ b/NIISAN/fade-nissan.html
@@ -266,7 +266,7 @@
 
 <body class="corona" style="margin:0px;">
    <div class="bzm_wrapper carousel-wrapper size_300x250">
-        <div class="cta"><span class="bzm_text_title bzm_text_bold" style="font-size:80%; color: white;">Infórmate</span></div>
+        <div class="cta"><span class="bzm_text_title bzm_text_bold" style="font-size:80%; color: white;">Más info</span></div>
         <a href="https://www.nissan.com.mx/leaf/" style="display: block;" target="_blank">
             <div class="carousel-container">
                 <div class="bzm_cover bg cover-1 carousel-item1 item-1"></div>
