--- a/NIISAN/slider-nissan.html
+++ b/NIISAN/slider-nissan.html
@@ -70,12 +70,12 @@
         }
         
            .tgx_logo {
-            position: absolute;
+            position: fixed;
             top:280px;
             width: 85px;
             line-height: 1.3em;
             z-index: 5;
-            margin-left: 48.5%;
+            margin-left: 49%;
             left: -30px;
             background-color: #880000;
             font-family: 'Lato', sans-serif;
