--- a/ift/Cube.html
+++ b/ift/Cube.html
@@ -522,7 +522,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i4.i181.button.css:button/base/css*/
-#i181 { position: absolute; cursor: pointer; opacity: 1; background-color: rgba(127,186,32,1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 20px; border-color: rgba(127,186,32,1); border-width: 1px; margin:-1px; border-style: solid; }
+#i181 { position: absolute; cursor: pointer; opacity: 1; background-color: rgba(95,150,5,1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 20px; border-color: rgba(127,186,32,1); border-width: 1px; margin:-1px; border-style: solid; }
 #i181:hover { opacity: 1; background-color: rgba(0,90,140, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
 #i181:active { opacity: 1; background-color: rgba(0,80,130, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
 /*#/#*//*#i181.i182.positioning.css:positioning/base/css.1*/
@@ -704,7 +704,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i5.i185.button.css:button/base/css*/
-#i185 { position: absolute; cursor: pointer; opacity: 1; background-color: rgba(127,186,32,1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 20px; border-color: rgba(127,186,32,1); border-width: 1px; margin:-1px; border-style: solid; }
+#i185 { position: absolute; cursor: pointer; opacity: 1; background-color: rgba(95,150,5,1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 20px; border-color: rgba(127,186,32,1); border-width: 1px; margin:-1px; border-style: solid; }
 #i185:hover { opacity: 1; background-color: rgba(0,90,140, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
 #i185:active { opacity: 1; background-color: rgba(0,80,130, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
 /*#/#*//*#i185.i186.positioning.css:positioning/base/css.1*/
@@ -766,7 +766,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i6.i191.button.css:button/base/css*/
-#i191 { position: absolute; cursor: pointer; opacity: 1; background-color: rgba(127,186,32,1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 20px; border-color: rgba(127,186,32,1); border-width: 1px; margin:-1px; border-style: solid; }
+#i191 { position: absolute; cursor: pointer; opacity: 1; background-color: rgba(95,150,5,1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 20px; border-color: rgba(127,186,32,1); border-width: 1px; margin:-1px; border-style: solid; }
 #i191:hover { opacity: 1; background-color: rgba(0,90,140, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
 #i191:active { opacity: 1; background-color: rgba(0,80,130, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
 /*#/#*//*#i191.i192.positioning.css:positioning/base/css.1*/
@@ -800,7 +800,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i179.i180.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i99 { cursor: pointer; }
 /*#/#*//*#i99.i100.positioning.css:positioning/base/css.1*/
-#i99 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 46%;
+#i99 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 46.8%;
         -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
@@ -921,7 +921,11 @@ document.getElementById('i91').addEventListener('click', function(e){
 
 /*#/#*//*#i4.i50.actions.js:actions/base/js*/
 /* Name: On Click; */
-
+document.getElementById('i4').addEventListener('click', function(e){
+    /*#i50.i51.actions-clicktag.js:actions-clicktag/base/js.1*/
+    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
 /*#/#*//*#i5.i58.image.js:image/base/js*/
 
 /*#/#*//*#i95.i175.actions.js:actions/base/js*/
@@ -935,7 +939,11 @@ document.getElementById('i95').addEventListener('click', function(e){
 
 /*#/#*//*#i5.i52.actions.js:actions/base/js*/
 /* Name: On Click; */
-
+document.getElementById('i5').addEventListener('click', function(e){
+    /*#i52.i53.actions-clicktag.js:actions-clicktag/base/js.1*/
+    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
 /*#/#*//*#i6.i197.image.js:image/base/js*/
 
 /*#/#*//*#i99.i179.actions.js:actions/base/js*/
@@ -949,7 +957,11 @@ document.getElementById('i99').addEventListener('click', function(e){
 
 /*#/#*//*#i6.i54.actions.js:actions/base/js*/
 /* Name: On Click; */
-
+document.getElementById('i6').addEventListener('click', function(e){
+    /*#i54.i55.actions-clicktag.js:actions-clicktag/base/js.1*/
+    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
 /*#/#*/
 
   function next(){
