--- a/home store/slider-cta central.html
+++ b/home store/slider-cta central.html
@@ -70,13 +70,13 @@
         }
         
            .tgx_logo {
-            position: absolute;
+            position: fixed;
             top:330px;
             width: 100px;
             line-height: 1.3em;
             z-index: 5;
-            margin-left: 46%;
-            left: -30px;
+            margin-left: 6%;
+           
             background-color: #000000;
             font-family: 'Lato', sans-serif;
             padding: 5px;
