--- a/home store/slider-cta central.html
+++ b/home store/slider-cta central.html
@@ -75,7 +75,7 @@
             width: 100px;
             line-height: 1.3em;
             z-index: 5;
-            margin-left: 9%;
+            left: 715px;
            
             background-color: #000000;
             font-family: 'Lato', sans-serif;
