--- a/ift/Cube.html
+++ b/ift/Cube.html
@@ -809,11 +809,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i54.i55.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i6 { cursor: pointer; }
 /*#/#*//*#i2.i3.positioning.css:positioning/base/css.1*/
-#i2 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 100%; height: 100%;
-        -ms-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        transform: translate(0, 0) translate(0, 0) rotate(0deg);
+#i2 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
+        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*/
 </style>
@@ -897,7 +897,7 @@ cube_i2.init({
     autoRotateEnabled: true,
     autoRotateDelay: 3,
     autoRotateDirection: 'rotateNext',
-    defaultButtonsOnPanels: true,
+    defaultButtonsOnPanels: false,
     transition: 0.8
 });
 
@@ -921,11 +921,7 @@ document.getElementById('i91').addEventListener('click', function(e){
 
 /*#/#*//*#i4.i50.actions.js:actions/base/js*/
 /* Name: On Click; */
-document.getElementById('i4').addEventListener('click', function(e){
-    /*#i50.i51.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
+
 /*#/#*//*#i5.i58.image.js:image/base/js*/
 
 /*#/#*//*#i95.i175.actions.js:actions/base/js*/
@@ -939,11 +935,7 @@ document.getElementById('i95').addEventListener('click', function(e){
 
 /*#/#*//*#i5.i52.actions.js:actions/base/js*/
 /* Name: On Click; */
-document.getElementById('i5').addEventListener('click', function(e){
-    /*#i52.i53.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
+
 /*#/#*//*#i6.i197.image.js:image/base/js*/
 
 /*#/#*//*#i99.i179.actions.js:actions/base/js*/
@@ -957,11 +949,7 @@ document.getElementById('i99').addEventListener('click', function(e){
 
 /*#/#*//*#i6.i54.actions.js:actions/base/js*/
 /* Name: On Click; */
-document.getElementById('i6').addEventListener('click', function(e){
-    /*#i54.i55.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
+
 /*#/#*/
 
   function next(){
