--- a/home store/slider-cta central.html
+++ b/home store/slider-cta central.html
@@ -70,12 +70,12 @@
         }
         
            .tgx_logo {
-            position: fixed;
+            position: absolute;
             top:330px;
             width: 100px;
             line-height: 1.3em;
             z-index: 5;
-            left: 45%;
+            left: 42%;
            
             background-color: #000000;
             font-family: 'Lato', sans-serif;
