Correccion de propiedad

--- a/Vodafone/Video3.html
+++ b/Vodafone/Video3.html
@@ -1,116 +1,116 @@
 <style>
-    .Adidas1Video p {
+    .video3 p {
         margin: 0px;
     }
 
-    .Adidas1Video .bg.cover-1 {
+    .video3 .bg.cover-1 {
         background-size: cover
     }
 
-    .Adidas1Video .btn {
+    .video3 .btn {
         margin-top: 0;
         padding-left: 0
     }
 
-    .Adidas1Video a,
-    .Adidas1Video a:hover {
+    .video3 a,
+    .video3 a:hover {
         text-decoration: none;
         color: #fff
     }
 
-    .Adidas1Video .bzm_wrapper {
+    .video3 .bzm_wrapper {
         position: relative;
         overflow: hidden;
         color: #000;
         font-family: Lato, sans-serif;
     }
 
-    .Adidas1Video .bzm_wrapper.size_300x250 {
+    .video3 .bzm_wrapper.size_300x250 {
         width: 300px;
         height: 250px;
         background-color: #FFF
     }
 
-    .Adidas1Video .bzm_cover,
-    .Adidas1Video .carousel-wrapper {
+    .video3 .bzm_cover,
+    .video3 .carousel-wrapper {
         position: relative;
         width: 100%
     }
 
-    .Adidas1Video .bzm_cover {
+    .video3 .bzm_cover {
         height: 150px
     }
 
-    .Adidas1Video .bzm_cover.bzm_pos_tl {
+    .video3 .bzm_cover.bzm_pos_tl {
         top: 3%;
         left: 3%
     }
 
-    .Adidas1Video .bzm_pos_tr {
+    .video3 .bzm_pos_tr {
         top: 3%;
         right: 3%
     }
 
-    .Adidas1Video .bzm_pos_bl {
+    .video3 .bzm_pos_bl {
         bottom: 3%;
         left: 3%
     }
 
-    .Adidas1Video .bzm_pos_br {
+    .video3 .bzm_pos_br {
         bottom: 3%;
         right: 3%
     }
 
-    .Adidas1Video .bzm_pos_bm {
+    .video3 .bzm_pos_bm {
         bottom: 3%;
         left: calc(100% - 70%)
     }
 
-    .Adidas1Video .bzm_text {
+    .video3 .bzm_text {
         padding: 6px 0 10px .3em;
         line-height: 1.1;
         color: #000;
     }
 
-    .Adidas1Video .bzm_text_title {
+    .video3 .bzm_text_title {
         font-size: 14px;
         color: #000;
     }
 
-    .Adidas1Video .bzm_text_light {
+    .video3 .bzm_text_light {
         font-size: 10px;
         font-weight: 0
     }
 
-    .Adidas1Video .bzm_text_medium {
+    .video3 .bzm_text_medium {
         font-size: 15px;
         font-weight: 500;
         line-height: 1.4
     }
 
-    .Adidas1Video .bzm_text_bold {
+    .video3 .bzm_text_bold {
         font-size: 20px;
         font-weight: 700;
         line-height: 1;
     }
 
-    .Adidas1Video .bzm_text_small {
+    .video3 .bzm_text_small {
         font-size: 10px;
         line-height: 1
     }
 
-    .Adidas1Video .carousel-wrapper {
+    .video3 .carousel-wrapper {
         height: auto;
         margin: 0 auto
     }
 
-    .Adidas1Video .carousel-item1 {
+    .video3 .carousel-item1 {
         position: absolute;
         opacity: 0;
         transition: all .5s ease-in-out
     }
 
-    .Adidas1Video .bzm_button {
+    .video3 .bzm_button {
         position: absolute;
         bottom: 7px;
         left: 3%;
@@ -124,17 +124,17 @@
         cursor: pointer
     }
 
-    .Adidas1Video .bzm_button:hover {
+    .video3 .bzm_button:hover {
         background-color: #579e38
     }
 
-    .Adidas1Video .carousel-container {
+    .video3 .carousel-container {
         width: 300px;
         height: 150px;
         overflow-y: hidden
     }
 
-    .Adidas1Video #botones-para-compartir {
+    .video3 #botones-para-compartir {
         text-align: right;
     }
 
@@ -163,7 +163,7 @@
         -o-transition: all .5s;
     }
 
-    .Adidas1Video .logo {
+    .video3 .logo {
         width: 41%;
         z-index: 2;
         background-color: #696969;
@@ -177,7 +177,7 @@
 
 </style>
 
-<div class="Adidas1Video" style="margin:0px;">
+<div class="video3" style="margin:0px;">
     <div class="bzm_wrapper carousel-wrapper size_300x250">
         <a href="https://www.youtube.com/watch?v=5h3MZbmRfs8&t=3s" style="display: block;" target="block">
 
