--- a/Vodafone/Video2.html
+++ b/Vodafone/Video2.html
@@ -70,6 +70,7 @@
         padding: 6px 0 10px .3em;
         line-height: 1.1;
         color: #000;
+        width:97%
     }
 
     .video2 .bzm_text_title {
@@ -199,7 +200,7 @@
 
             </div>
 
-            <div style="bottom:0px;height: 18px;text-align:right;margin-top:-2px; margin-right: 10px;">
+            <div style="bottom:0px;height: 18px;float:right; margin-top:-2px; margin-right: 12px;">
                 <img src="https://i.imgur.com/9ACFFLS.png" style="height:34px">
                
             </div>
