ajuste cta slider

--- a/PrecioDeLaHistoria/slider-extendido.html
+++ b/PrecioDeLaHistoria/slider-extendido.html
@@ -70,7 +70,7 @@
         }
         
            .tgx_logo {
-            position: absolute;
+            position:fixed;
             bottom:68px;
             width: 100px;
             line-height: 1.3em;
