--- a/PrecioDeLaHistoria/slider-extendido.html
+++ b/PrecioDeLaHistoria/slider-extendido.html
@@ -70,7 +70,7 @@
         }
         
            .tgx_logo {
-            position:fixed;
+            position:absolute;
             bottom:40px;
             width: 100px;
             line-height: 1.3em;
