--- a/quien da mas/fade.html
+++ b/quien da mas/fade.html
@@ -316,7 +316,7 @@
         </div>
         <div class="value_text"> 
             <span class="value_text_title value_text_bold">
-             ¿Arriesgarias tu dinero a ciegas?
+             ¿Cuanto pagarías por esto?
             </span>
             <br/>  
  
