--- a/Kombucha/fade.html
+++ b/Kombucha/fade.html
@@ -56,23 +56,23 @@
         .kombucha_cover {
             position: relative;
             width: 100%;
-            height: 70%;
+            height: 65%;
         }
 
         .bg.cover-1 {
-            background: url("https://i.imgur.com/5CmT1hd.jpg");
+            background: url("https://i.imgur.com/tWzNRTH.png");
             background-size: cover;
         }
 
         .bg.cover-2 {
-            background: url("https://i.imgur.com/Q1msoyj.jpg");
+            background: url("https://i.imgur.com/8CAvkaU.png");
             background-size: cover;
 
             
         }
 
         .bg.cover-3 {
-            background: url("https://i.imgur.com/rmm15RY.jpg");
+            background: url("https://i.imgur.com/mpGNygA.png");
             background-size: cover;
           
         }
@@ -136,6 +136,7 @@
             line-height: 1em;
             color: #453936;
             font-size: 19px;
+            font-family: 
         }
 
         .kombucha_text_title {
