cambio de fuente en cubo de kombucha

--- a/Kombucha/Cube.html
+++ b/Kombucha/Cube.html
@@ -471,6 +471,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#i261.i262.font-google.head:font-google/head-->
 <link href='' rel='stylesheet' type='text/css'>
 <!--#/#-->
+<!--#/#--><!--#i271.font-google.head:font/font-google/head-->
+<!--#i271.i272.font-google.head:font-google/head-->
+<link href='https://fonts.googleapis.com/css?family=Josefin+Sans:400,400i,700,700i' rel='stylesheet' type='text/css'>
+<!--#/#-->
 <!--#/#-->
 <!--#/#--><!--#css:common/css-->
 <style>
@@ -526,7 +530,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(40px, 220px) rotate(0deg);
 }
 /*#/#*//*#i4.i241.text.css:text/base/css*/
-#i241 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Brandon_blk."; font-size: 17px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
+#i241 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Josefin Sans"; font-size: 20px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
 /*#/#*//*#i241.i242.positioning.css:positioning/base/css.1*/
 #i241 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 273px; height: 43px;
         -ms-transform: translate(-50%, -50%) translate(-5px, 76px) rotate(0deg);
@@ -535,7 +539,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(-50%, -50%) translate(-5px, 76px) rotate(0deg);
 }
 /*#/#*//*#i4.i247.button.css:button/base/css*/
-#i247 { position: absolute; cursor: pointer; opacity: 1; background-color: rgba(242,12,150,1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 20px; border-color: rgba(242,12,150,1); border-width: 1px; margin:-1px; border-style: solid; }
+#i247 { position: absolute; cursor: pointer; opacity: 1; background-color: rgba(242,12,150,1); font-family: "Josefin Sans"; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 20px; border-color: rgba(242,12,150,1); border-width: 1px; margin:-1px; border-style: solid; }
 #i247:hover { opacity: 1; background-color: rgba(0,90,140, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
 #i247:active { opacity: 1; background-color: rgba(0,80,130, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
 /*#/#*//*#i247.i248.positioning.css:positioning/base/css.1*/
@@ -624,7 +628,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(72px, 220px) rotate(0deg);
 }
 /*#/#*//*#i5.i245.button.css:button/base/css*/
-#i245 { position: absolute; cursor: pointer; opacity: 1; background-color: rgba(242,12,150,1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 20px; border-color: rgba(242,12,150,1); border-width: 1px; margin:-1px; border-style: solid; }
+#i245 { position: absolute; cursor: pointer; opacity: 1; background-color: rgba(242,12,150,1); font-family: "Josefin Sans"; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 20px; border-color: rgba(242,12,150,1); border-width: 1px; margin:-1px; border-style: solid; }
 #i245:hover { opacity: 1; background-color: rgba(0,90,140, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
 #i245:active { opacity: 1; background-color: rgba(0,80,130, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
 /*#/#*//*#i245.i246.positioning.css:positioning/base/css.1*/
@@ -781,10 +785,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(8px, 220px) rotate(0deg);
         transform: translate(0, 0) translate(8px, 220px) rotate(0deg);
 }
-/*#/#*//*#i5.i267.text.css:text/base/css*/
-#i267 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Brandon_blk."; font-size: 17px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
-/*#/#*//*#i267.i268.positioning.css:positioning/base/css.1*/
-#i267 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 273px; height: 43px;
+/*#/#*//*#i5.i273.text.css:text/base/css*/
+#i273 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Josefin Sans"; font-size: 20px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
+/*#/#*//*#i273.i274.positioning.css:positioning/base/css.1*/
+#i273 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 273px; height: 43px;
         -ms-transform: translate(-50%, -50%) translate(-5px, 76px) rotate(0deg);
         -webkit-transform: translate(-50%, -50%) translate(-5px, 76px) rotate(0deg);
         -moz-transform: translate(-50%, -50%) translate(-5px, 76px) rotate(0deg);
@@ -842,7 +846,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(8px, 220px) rotate(0deg);
 }
 /*#/#*//*#i6.i237.button.css:button/base/css*/
-#i237 { position: absolute; cursor: pointer; opacity: 1; background-color: rgba(242,12,150,1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 20px; border-color: rgba(242,12,150,1); border-width: 1px; margin:-1px; border-style: solid; }
+#i237 { position: absolute; cursor: pointer; opacity: 1; background-color: rgba(242,12,150,1); font-family: "Josefin Sans"; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 20px; border-color: rgba(242,12,150,1); border-width: 1px; margin:-1px; border-style: solid; }
 #i237:hover { opacity: 1; background-color: rgba(0,90,140, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
 #i237:active { opacity: 1; background-color: rgba(0,80,130, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
 /*#/#*//*#i237.i238.positioning.css:positioning/base/css.1*/
@@ -870,10 +874,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(72px, 220px) rotate(0deg);
         transform: translate(0, 0) translate(72px, 220px) rotate(0deg);
 }
-/*#/#*//*#i6.i269.text.css:text/base/css*/
-#i269 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Brandon_blk."; font-size: 17px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
-/*#/#*//*#i269.i270.positioning.css:positioning/base/css.1*/
-#i269 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 273px; height: 43px;
+/*#/#*//*#i6.i275.text.css:text/base/css*/
+#i275 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Josefin Sans"; font-size: 20px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
+/*#/#*//*#i275.i276.positioning.css:positioning/base/css.1*/
+#i275 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 273px; height: 43px;
         -ms-transform: translate(-50%, -50%) translate(-5px, 76px) rotate(0deg);
         -webkit-transform: translate(-50%, -50%) translate(-5px, 76px) rotate(0deg);
         -moz-transform: translate(-50%, -50%) translate(-5px, 76px) rotate(0deg);
@@ -939,7 +943,7 @@ url('fonts/Brandon_blk..svg') format('svg');
 <!--#/#--><!--#i4.i229.image.html:image/html-->
 <img id="i229" src="https://i.imgur.com/pb0ckbL.png"/>
 <!--#/#--><!--#i4.i241.text.html:text/html-->
-<div id="i241">DO YOU KNOW THE INMORTAL HEALTH ELIXIR?</div>
+<div id="i241">Do you know the inmortal health elixir?</div>
 <!--#/#--><!--#i4.i247.button.html:button/html-->
 <button id="i247">Try it!!</button>
 <!--#/#--><!--#i4.i251.image.html:image/html-->
@@ -968,8 +972,8 @@ url('fonts/Brandon_blk..svg') format('svg');
 <img id="i249" src="https://i.imgur.com/351arWH.png"/>
 <!--#/#--><!--#i5.i253.image.html:image/html-->
 <img id="i253" src="https://i.imgur.com/aWe1A4G.png"/>
-<!--#/#--><!--#i5.i267.text.html:text/html-->
-<div id="i267">DO YOU KNOW THE INMORTAL HEALTH ELIXIR?</div>
+<!--#/#--><!--#i5.i273.text.html:text/html-->
+<div id="i273">Do you know the inmortal health elixir?</div>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
 <div id="i95"></div>
 <!--#/#-->
@@ -990,8 +994,8 @@ url('fonts/Brandon_blk..svg') format('svg');
 <img id="i243" src="https://i.imgur.com/351arWH.png"/>
 <!--#/#--><!--#i6.i257.image.html:image/html-->
 <img id="i257" src="https://i.imgur.com/xirMWRx.png"/>
-<!--#/#--><!--#i6.i269.text.html:text/html-->
-<div id="i269">DO YOU KNOW THE INMORTAL HEALTH ELIXIR?</div>
+<!--#/#--><!--#i6.i275.text.html:text/html-->
+<div id="i275">Do you know the inmortal health elixir?</div>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
 <div id="i99"></div>
 <!--#/#-->
@@ -1012,6 +1016,7 @@ url('fonts/Brandon_blk..svg') format('svg');
 <!--#/#--><!--#i261.font.html:font/html-->
 <!--#/#--><!--#i263.font.html:font/html-->
 <!--#/#--><!--#i265.font.html:font/html-->
+<!--#/#--><!--#i271.font.html:font/html-->
 <!--#/#--><!--#/#--><!--#js:common/js-->
 <script>
 /*#i2.cube.js:cube/js.1*/
@@ -1197,9 +1202,9 @@ name: aWe1A4G.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i253.i254.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i5.i267.text.meta:text/meta*/
+/*#/#*//*#i5.i273.text.meta:text/meta*/
 name: Texto; customName: 1;
-/*#/#*//*#i267.i268.positioning.meta:positioning/meta.1*/
+/*#/#*//*#i273.i274.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i5.i95.shape.meta:shape/meta*/
 name: Link;
@@ -1241,9 +1246,9 @@ name: xirMWRx.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i257.i258.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i6.i269.text.meta:text/meta*/
+/*#/#*//*#i6.i275.text.meta:text/meta*/
 name: Texto; customName: 1;
-/*#/#*//*#i269.i270.positioning.meta:positioning/meta.1*/
+/*#/#*//*#i275.i276.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i6.i99.shape.meta:shape/meta*/
 name: Link;
@@ -1259,4 +1264,8 @@ family: ;
 name: Web Font: Brandon_blk.; type: font-local; customName: ;
 /*#/#*//*#i265.font.meta:font/meta*/
 name: Web Font: Brandon_blk.; type: font-local; customName: ;
+/*#/#*//*#i271.font.meta:font/meta*/
+name: Web Font: Josefin Sans; type: font-google; customName: ;
+/*#/#*//*#i271.i272.font-google.meta:font-google/meta*/
+family: Josefin Sans;
 /*#/#*/--><!--#/#-->
