iconos redes para fade

--- a/A&E/fade.html
+++ b/A&E/fade.html
@@ -50,7 +50,7 @@
             z-index: 5;
             margin-left: 48%;
             left: -30px;
-            background-color: #217dfa;
+            background-color: #000;
             padding: 5px;
             border-radius: 20px;
             text-align: center;
@@ -275,8 +275,8 @@
                 <div class="bzm_cover bg cover-3 carousel-item1 item-3"></div>
             </div>
             <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000;line-height:1;font-size:18px;text-align:center;"> ¿Puede un carro ir más deprisa que un avión?</span></div>
-            <div style="bottom:0px;height:40px;text-align:right ;margin-top:5px; margin-right: 5px;"> <img src="https://i.imgur.com/FhIPXo5.png" style="height:35px;margin-top:-3px;">
-                <div id="botones-para-compartir" style="display:inline;float:left;margin-top:-34px;"> <span> <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=http://www.history.com/specials/speed-demons" target="_blank"> <img alt="compartir en facebook" class="facebooki" height="22" src="https://i.imgur.com/aWe1A4G.png" title="compartir en facebook" width="22" /></a><a class="shared" href="https://plus.google.com/share?url=http://www.history.com/specials/speed-demons" target="_blank"> <img alt="compartir en google+" class="googlei" height="22" src="https://i.imgur.com/ct3Z8bp.png" title="compartir en google+" width="22" /></a><a class="shared" href="https://twitter.com/home?status=http://www.history.com/specials/speed-demons" target="_blank"> <img alt="compartir en twitter" class="twitteri" height="22" src="https://i.imgur.com/ecFOGYd.png" title="compartir en twitter" width="22" /></a> </span></div>
+            <div style="bottom:0px;height:40px;text-align:right ;margin-top:5px; margin-right: 5px;"> <img src="https://i.imgur.com/FhIPXo5.png" style="height:35px;margin-top:-2px;">
+                <div id="botones-para-compartir" style="display:inline;float:left;margin-top:-22px;"> <span> <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=http://www.history.com/specials/speed-demons" target="_blank"> <img alt="compartir en facebook" class="facebooki" height="22" src="https://i.imgur.com/mJBNNLr.png" title="compartir en facebook" width="22" /></a><a class="shared" href="https://plus.google.com/share?url=http://www.history.com/specials/speed-demons" target="_blank"> <img alt="compartir en google+" class="googlei" height="22" src="https://i.imgur.com/dC7ka2p.png" title="compartir en google+" width="22" /></a><a class="shared" href="https://twitter.com/home?status=http://www.history.com/specials/speed-demons" target="_blank"> <img alt="compartir en twitter" class="twitteri" height="22" src="https://i.imgur.com/YN2Vf5g.png" title="compartir en twitter" width="22" /></a> </span></div>
             </div>
         </a>
     </div>
