--- a/A&E/fade.html
+++ b/A&E/fade.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Consumer_Fade</title>
+    <title>fade</title>
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,700,700i" rel=stylesheet>
     <style>
         .corona p {
@@ -45,7 +45,7 @@
          .cta {
             position: absolute;
             bottom: 85px;
-            width: 100px;
+            width: 120px;
             line-height: 1.3em;
             z-index: 5;
             margin-left: 48%;
@@ -108,7 +108,7 @@
             line-height: 1.1;
             color: #000;
             text-align: center;
-            margin-top: 15px;
+            margin-top: 12px;
             width: 99%;
             
         }
@@ -132,7 +132,7 @@
 
         .corona .bzm_text_bold {
             font-size: 18px;
-            font-weight: 500;
+            font-weight: 700;
             line-height: 1
         }
 
@@ -267,16 +267,16 @@
 
 <body class="corona" style="margin:0px;">
    <div class="bzm_wrapper carousel-wrapper size_300x250">
-        <div class="cta"><span class="bzm_text_title bzm_text_bold" style="font-size:60%; color: white;">¿Máxima velocidad?</span></div>
+        <div class="cta"><span class="bzm_text_title bzm_text_bold" style="font-size:70%; color: white;">¿Máxima velocidad?</span></div>
         <a href="http://www.history.com/specials/speed-demons" style="display: block;" target="_blank">
             <div class="carousel-container">
                 <div class="bzm_cover bg cover-1 carousel-item1 item-1"></div>
                 <div class="bzm_cover bg cover-2 carousel-item1 item-2"></div>
                 <div class="bzm_cover bg cover-3 carousel-item1 item-3"></div>
             </div>
-            <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000;line-height:1;font-size:18px;text-align:center;"> ¿Puede un carro ir más deprisa que un avión?</span></div>
+            <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000;line-height:1;font-size:20px;text-align:center;"> ¿Puede un carro ir más deprisa que un avión?</span></div>
             <div style="bottom:0px;height:30px;text-align:right ;margin-top:8px; margin-right: 5px;"> <img src="https://i.imgur.com/FhIPXo5.png" style="height:35px;margin-top:-2px;">
-                <div id="botones-para-compartir" style="display:inline;float:left;margin-top:-28px;"> <span> <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=http://www.history.com/specials/speed-demons" target="_blank"> <img alt="compartir en facebook" class="facebooki" height="22" src="https://i.imgur.com/mJBNNLr.png" title="compartir en facebook" width="22" /></a><a class="shared" href="https://plus.google.com/share?url=http://www.history.com/specials/speed-demons" target="_blank"> <img alt="compartir en google+" class="googlei" height="22" src="https://i.imgur.com/dC7ka2p.png" title="compartir en google+" width="22" /></a><a class="shared" href="https://twitter.com/home?status=http://www.history.com/specials/speed-demons" target="_blank"> <img alt="compartir en twitter" class="twitteri" height="22" src="https://i.imgur.com/YN2Vf5g.png" title="compartir en twitter" width="22" /></a> </span></div>
+                <div id="botones-para-compartir" style="display:inline;float:left;margin-top:-30px;"> <span> <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=http://www.history.com/specials/speed-demons" target="_blank"> <img alt="compartir en facebook" class="facebooki" height="22" src="https://i.imgur.com/mJBNNLr.png" title="compartir en facebook" width="22" /></a><a class="shared" href="https://plus.google.com/share?url=http://www.history.com/specials/speed-demons" target="_blank"> <img alt="compartir en google+" class="googlei" height="22" src="https://i.imgur.com/dC7ka2p.png" title="compartir en google+" width="22" /></a><a class="shared" href="https://twitter.com/home?status=http://www.history.com/specials/speed-demons" target="_blank"> <img alt="compartir en twitter" class="twitteri" height="22" src="https://i.imgur.com/YN2Vf5g.png" title="compartir en twitter" width="22" /></a> </span></div>
             </div>
         </a>
     </div>
