--- a/Caffeine and octaine/video.html
+++ b/Caffeine and octaine/video.html
@@ -24,7 +24,7 @@
 		.HistoryChannel .bzm_pos_bl{bottom:3%;left:3%}
 		.HistoryChannel .bzm_pos_br{bottom:3%;right:3%}
 		.HistoryChannel .bzm_pos_bm{bottom:3%;left:calc(100% - 70%)}
-		.HistoryChannel .bzm_text{padding:6px 0 10px .3em;line-height:1.1;color:#000; margin-left:8px;margin-right: 15;}
+		.HistoryChannel .bzm_text{padding:6px 0 10px .3em;line-height:1.1;color:#000; margin-left:8px;margin-right: 15; margin-top: 6px;}
 		.HistoryChannel .bzm_text_title{font-size:16px;color:#000;}
 		.HistoryChannel .bzm_text_light{font-size:10px;font-weight:0}
 		.HistoryChannel .bzm_text_medium{font-size:15px;font-weight:500;line-height:1.4}
@@ -44,7 +44,7 @@
 		float: right;
 		height: 40px;
 		text-align: center;
-		margin-top: -5px;
+		margin-top: -6px;
 		margin-right: -50px
 			}
 
@@ -85,7 +85,7 @@
 				
 			</div>
         
-         <div style="bottom:0px;height: 1px;text-align:left;margin-top:1%">
+         <div style="bottom:0px;height: 1px;text-align:left;margin-top:3%">
                 <div id="botones-para-compartir" style="display:inline;float:left;margin-left:9px;margin-top:2px;">
                     <span>  
                         <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://www.caffeineandoctane.com/tv-show"  target="block">    
