--- a/Kraken/fijo.html
+++ b/Kraken/fijo.html
@@ -47,7 +47,7 @@
         .AmericanFijo .bzm_text {
             margin-top: -10px;
             margin-left: 8px;
-            text-align: left;
+            text-align: center;
             line-height: 1em;
             font: trebuchet MS 
         }
@@ -191,7 +191,7 @@
             float: right;
             height: 15px;
             text-align: center;
-            margin-top: 7.5px;
+            margin-top: 1px;
             margin-right: 2.5px
         }
 	 </style> 
@@ -201,10 +201,10 @@
         <a href="https://sede.xunta.gal/detalle-procedemento?codtram=PR937A" target="_blank">
             <div id="te-wrapper" class="te-wrapper">
                 <div class="te-images"> 
-                <img src="https://i.imgur.com/TfFnpel.jpg" alt="" /> 
+                <img src="https://i.imgur.com/yecMLHt.png" alt="" /> 
                  </div>
                 <div class="te-cover"> 
-                    <img src="https://i.imgur.com/TfFnpel.jpg" alt="" /> 
+                    <img src="https://i.imgur.com/yecMLHt.png" alt="" /> 
                 </div>
                 <div class="te-transition">
                     <div class="te-front"></div>
@@ -212,12 +212,12 @@
                 </div>
                 <div style="margin-top:-3px; margin-left:0px; margin-right: 10px;">
                     <div class="bzm_text"> 
-                        <span class="bzm_text_title bzm_text_bold" style="color:#000; font-size:15px; text-align:left;">
-                          Es galeg@o ou descendente e retornaches? Solicita a túa axuda de 5.000 a 7.000€ para emprender!
+                        <span class="bzm_text_title bzm_text_bold" style="color:#000; font-size:25px; text-align: center;">
+                          #RonPorn Las 7 penitencias del Kraken 
                         </span> 
-                        <img class="logo" src="https://i.imgur.com/5qaaAMk.png"  style="height:35px"> 
+                        <img class="logo" src="https://i.imgur.com/7S0FtB7.png"  style="height:40px"> 
                     </div>
-                    <div id="botones-para-compartir" style="display:inline;float:left;margin-top:15px;margin-left:8px;"> <span> <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://www.americanexpress.com/mx/content/cards/gold-elite-credit-card.html" target="_blank"> <img alt="compartir en facebook" class="facebooki" height="20" src="https://i.imgur.com/aWe1A4G.png" title="compartir en facebook" width="20" /></a><a class="shared" href="https://plus.google.com/share?url=https://www.americanexpress.com/mx/content/cards/gold-elite-credit-card.html" target="_blank"> <img alt="compartir en google+" class="googlei" height="20" src="https://i.imgur.com/MRUYpOx.png" title="compartir en google+" width="20" /></a><a class="shared" href="https://twitter.com/home?status=https://www.americanexpress.com/mx/content/cards/gold-elite-credit-card.html" target="_blank"> <img alt="compartir en twitter" class="twitteri" height="20" src="https://i.imgur.com/ecFOGYd.png" title="compartir en twitter" width="20" /></a> </span></div>
+                    <div id="botones-para-compartir" style="display:inline;float:left;margin-top:18px;margin-left:8px;"> <span> <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://www.americanexpress.com/mx/content/cards/gold-elite-credit-card.html" target="_blank"> <img alt="compartir en facebook" class="facebooki" height="20" src="https://i.imgur.com/mJBNNLr.png" title="compartir en facebook" width="20" /></a><a class="shared" href="https://plus.google.com/share?url=https://www.americanexpress.com/mx/content/cards/gold-elite-credit-card.html" target="_blank"> <img alt="compartir en google+" class="googlei" height="20" src="https://i.imgur.com/dC7ka2p.png" title="compartir en google+" width="20" /></a><a class="shared" href="https://twitter.com/home?status=https://www.americanexpress.com/mx/content/cards/gold-elite-credit-card.html" target="_blank"> <img alt="compartir en twitter" class="twitteri" height="20" src="https://i.imgur.com/YN2Vf5g.png" title="compartir en twitter" width="20" /></a> </span></div>
                 </div>
             </div>
         </a>
