--- a/Berlitz/Cube.html
+++ b/Berlitz/Cube.html
@@ -996,7 +996,7 @@ cube_i2.init({
     autoRotateEnabled: true,
     autoRotateDelay: 3,
     autoRotateDirection: 'rotateNext',
-    defaultButtonsOnPanels: true,
+    defaultButtonsOnPanels: false,
     transition: 0.8
 });
 
