texto fade berlitz

--- a/Berlitz/Fade.html
+++ b/Berlitz/Fade.html
@@ -273,7 +273,7 @@
                 <div class="bzm_cover bg cover-2 carousel-item1 item-2"></div>
                 <div class="bzm_cover bg cover-3 carousel-item1 item-3"></div>
             </div>
-            <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000;line-height:1;font-size:20px;text-align:center;"> ¿Puede un carro ir más deprisa que un avión?</span></div>
+            <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000;line-height:1;font-size:16px;text-align:center;">  Aprende inglés con el mejor y además obtén los mejores descuentos </span></div>
             <div style="bottom:0px;height:25px;text-align:right ;margin-top:8px; margin-right: 5px;"> <img src="https://i.imgur.com/A0gU5yP.png" style="height:25px;margin-top:-2px;">
                 <div id="botones-para-compartir" style="display:inline;float:left;margin-top:-30px;"> <span> <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=http://www.berlitz.com.mx/" target="_blank"> <img alt="compartir en facebook" class="facebooki" height="22" src="https://i.imgur.com/5R4ocNu.png" title="compartir en facebook" width="22" /></a><a class="shared" href="https://plus.google.com/share?url=http://www.berlitz.com.mx/" target="_blank"> <img alt="compartir en google+" class="googlei" height="22" src="https://i.imgur.com/j4rdTdu.png" title="compartir en google+" width="22" /></a><a class="shared" href="https://twitter.com/home?status=http://www.berlitz.com.mx/" target="_blank"> <img alt="compartir en twitter" class="twitteri" height="22" src="https://i.imgur.com/jmHQ4Uu.png" title="compartir en twitter" width="22" /></a> </span></div>
             </div>
